# opensec-env

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  openenv.yaml  pyproject.toml
client/: __init__.py  env_client.py  openenv_client.py
configs/: baselines.yaml  gdpo_0.6b.yaml  gdpo_1.7b.yaml  gdpo_4b.yaml  gdpo_4b_continue.yaml  gdpo_4b_continue_v2.yaml  gdpo_4b_continue_v2_local.yaml  gdpo_4b_curriculum.yaml
docs/: ATTACKER_POLICY_SPEC.md  EVAL_PROTOCOL.md  EXPERIMENT_LOG_v2_baselines.md  ORACLE_SPEC.md  SCHEMA_SPEC.md  TAXONOMY_SPEC.md  TECHNICAL_REPORT.md
hf_assets/: dataset_card.md  model_card.md
oracle/: __init__.py  calibration.py  scoring.py  thresholds.py  verifier.py
paper/: main.tex
playground/: index.html
schemas/: ground_truth_schema.json  seed_schema.json  sqlite_schema.sql
scripts/: backfill_taxonomy.py  compute_ir_metrics.py  download_seeds.py  eval.py  eval_checkpoint.py  eval_tiers.py  eval_utils.py  generate_calibration_figure.py  generate_seeds.py  generate_teaser_figure_v2.py  green_agent.py  prompts.py  reload_sglang.sh  run_llm_baseline.py  run_oracle_baseline.py  summarize.py  summarize_baselines.py  update_model_card.py  upload_dataset_to_hf.py  validate_schemas.py  validate_seed.py  validate_seed_set.py
server/: __init__.py  app.py  environment.py  models.py  openenv_adapter.py
sim/: attacker_policy.py  attacker_state_machine.py  defender_prompt.py  inference.py  log_compiler.py
tests/: test_baseline.py  test_calibration.py  test_compile_logs.py  test_fetch_alert_parsing.py  test_injection_tiers.py  (+10 more)
(+458 files in other folders)
